namespace Zoo.Animals;

public abstract class Animal
{
    public string Type { get; init; }
    public string Name { get; init; }
    public int Age { get; set; }
}