namespace Zoo;

public class Fish : Animal
{
    public Fish()
    {
        _habitats.Add(TypeHabitat.Water);
    }
}