namespace Zoo;

public enum TypeHabitat
{
    Water, Terra
}