@startuml
'https://plantuml.com/class-diagram

enum TypeHabitat{
Water
Terra
}

TypeHabitat <--o Animal
abstract class Animal {
+ types : TypeHabitat[]
+ name : string
+ age : int
}

Animal <|-- Frog
class Frog {}

Animal <|-- Fish
class Fish {}

Animal <--o Aviary
abstract class Aviary {
+ animals : Animal[]
+ max_count_animals : int
}

Aviary <|-- WaterAviary
class WaterAviary {
+ AddAnimal(animal : Animal)
}

@enduml